added wizard for custom fields and imports
